# X-Skill-Scanner

./: .ant-intl-scanner.yml  .gitignore  .omni-scanner.yml  .scannerignore  .skillignore  .x-skill-scanner.yml  CHANGELOG.md  CONTRIBUTING.md  LEGAL.md  LICENSE  README.md  README_CH.md  REFACTOR_TASK.md  SECURITY.md  SKILL.md  SKILL.md.backup  VERSION.md  package_manifest.txt  pyproject.toml  requirements.txt  safe-install  scan
config/: agent_adapters.yaml
configs/: openclaw.example.json  openclaw_llm_task.example.json
data/: threat_intel.json
docs/: ARCHITECTURE.md  OPTIMIZATION_REPORT.md  SUBAGENT-REVIEW-DEBUG-GUIDE.md  THREAT_INTEL_SOURCES.md  USAGE.md
hooks/: clawhub_hook.py  pre_install_scan
i18n/: __init__.py
lib/: __init__.py  _deprecated_llm_reviewer.py  agent_adapter.py  ast_analyzer.py  baseline.py  clawhub_hook.py  constants.py  correlation_engine.py  credential_theft_detector.py  deobfuscator.py  dependency_checker.py  engine_loader.py  entropy_analyzer.py  env_detector.py  fp_filter.py  i18n.py  install_hook_detector.py  install_wrapper.sh  llm_provider.py  llm_reviewer.py  models.py  models_v2.py  network_profiler.py  openclaw_config.py  parallel_scanner.py  path_filter.py  platform_discovery.py  platform_registry.py  pre_flight_check.py  prompt_injection_probes.py  reporter.py  reporter_enhanced.py  risk_scorer.py  rule_loader.py  scan_cache.py  scanner.py  scanner_lazy.py  self_check.py  semantic_auditor.py  setup_semantic_audit.py  (+9 more)
prompts/: install_advice.md  scan_context.md  scan_report.md  semantic_review.md
rules/: markdown_rules.yaml  (+2 more)
(+45 files in other folders)
